<resources>
    <string name="app_name">DoodleJump</string>
    <string name="action_settings">Settings</string>
    <string name="button_label_options">Options</string>
    <string name="text_label_title">Dudol Giamp</string>
    <string name="button_label_multi">MULTI PLAYER</string>
    <string name="main_menu_background">main_menu_background</string>
    <string name="optionsText">TextView</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_label_single">SINGLE PLAYER</string>
    <string name="button_label_shop">SHOP</string>
    <string name="button_label_score">SCOREBOARD</string>
    <string name="button_label_map">MAP</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDxn_pt1EHrqZ8utuFj_7yG2s4cKZeDAzQ</string>
    <string name="register">Account</string>
    <string name="add_user">Add User</string>
    <string name="complete">Complete</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="scores">SCORES</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="something"></string>
    <string name="bob">Bob</string>
    <string name="bluebob">BlueBob</string>
    <string name="junglebob">JungleBob</string>
    <string name="bunnybob">BunnyBob</string>
    <string name="shop">SHOP</string>
    <string name="background">Background</string>
    <string name="more_coming_soon">More Coming Soon</string>
    <string name="morecomingsoon">MoreComingSoon</string>
    <string name="update">Update</string>
    <string name="txt_old_password">Old password</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="login">Login</string>
    <string name="money"></string>

    <string name="title_activity_multi">MultiActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loadingBG">loadingBG</string>

    <string name="maps_zone_changed_notification_title">Maps zone has changed: %1$s</string>
    <string name="maps_zone_changed_notification_text">%1$s </string>

    <string name="play_notification_title">Maps zone has changed: %1$s</string>
    <string name="play_notification_text">%1$s </string>


    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="play_notify_notification_title_template">Play notify: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="play_notify_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

</resources>
