<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="662dp"
        android:layout_height="738dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/main_menu_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/dudol_giamp_background" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="261dp"
        android:layout_height="79dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_label_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/button_options"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/plat1"
        android:onClick="launchOptionsActivity"
        android:text="@string/button_label_options"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/plat1"
        android:text="@string/button_label_multi"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_single"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_single"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/plat1"
        android:onClick="launchSinglePlayerActivity"
        android:text="@string/button_label_single"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/plat1"
        android:text="@string/button_label_shop"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_multi"
        app:layout_constraintVertical_bias="0.0"
        tools:text="SHOP" />

    <Button
        android:id="@+id/button_scoreboard"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/plat1"
        android:text="@string/button_label_score"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_shop"
        app:layout_constraintVertical_bias="0.0"
        tools:text="SCOREBOARD" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/plat1"
        android:text="@string/button_label_map"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_scoreboard"
        app:layout_constraintVertical_bias="0.0"
        tools:text="MAP" />

</android.support.constraint.ConstraintLayout>